--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <!-- Navbar -->
         <div class="navbar navbar-expand-lg navbar-dark sticky" data-offset="500">
             <div class="container">
-                <a href="" class="navbar-brand">V-Folio</a>
+                <a href="" class="navbar-brand">S A M A D</a>
                 <button class="navbar-toggler" data-toggle="collapse" data-target="#main-navbar" aria-expanded="true">
           <span class="ti-menu"></span>
         </button>
@@ -128,13 +128,13 @@
                     </div>
                 </div>
                 <div class="col-lg-6 offset-lg-1 wow fadeInRight">
-                    <h1 class="fw-light">Stephen Doe</h1>
-                    <h5 class="fg-theme mb-3">UI/UX & Web Designer</h5>
+                    <h1 class="fw-light">Abdul Samad</h1>
+                    <h5 class="fg-theme mb-3">Data Scientist</h5>
                     <p class="text-muted">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form but the majority have suffered alteration in some</p>
                     <ul class="theme-list">
-                        <li><b>From:</b> Texas, US</li>
-                        <li><b>Lives In:</b> Texas, US</li>
-                        <li><b>Age:</b> 25</li>
+                        <li><b>From:</b> Multan, PK</li>
+                        <li><b>Lives In:</b> Multan, PK</li>
+                        <li><b>Age:</b> 22</li>
                         <li><b>Gender:</b> Male</li>
                     </ul>
                     <button class="btn btn-theme-outline">Download CV</button>
