--- a/index.html
+++ b/index.html
@@ -39,18 +39,18 @@
         <span class="ti-arrow-up"></span>
     </div>
 
-    <!-- Setting button -->
+    <!-- Setting button
     <div class="config">
         <div class="template-config">
-            <!-- Settings -->
+            <!-- Settings
             <div class="d-block">
                 <button class="btn btn-fab btn-sm" id="sideel" title="Settings"><span class="ti-settings"></span></button>
             </div>
-            <!-- Puschase -->
+            <!-- Puschase 
             <div class="d-block">
                 <a href="https://macodeid.com/projects/virtual-folio/" class="btn btn-fab btn-sm" title="Get this template" data-toggle="tooltip" data-placement="left"><span class="ti-download"></span></a>
             </div>
-            <!-- Help -->
+            <!-- Help 
             <div class="d-block">
                 <a href="#" class="btn btn-fab btn-sm" title="Help" data-toggle="tooltip" data-placement="left"><span class="ti-help"></span></a>
             </div>
@@ -72,7 +72,7 @@
         <option value="blog-minibar">Blog (Minibar)</option>
       </select>
         </div>
-    </div>
+    </div> -->
 
     <div class="vg-page page-home" id="home" style="background-image: url(assets/img/bg_image_1.jpg)">
         <!-- Navbar -->
@@ -122,7 +122,7 @@
     <div class="vg-page page-about" id="about">
         <div class="container py-5">
             <div class="row">
-                <div class="col-lg-4 py-3">
+                <div style="margin-bottom: 20px;" class="col-lg-4 py-3">
                     <div class="img-place wow fadeInUp">
                         <img src="assets/img/person.jpg" alt="">
                     </div>
@@ -483,7 +483,7 @@
     </div>
     <!-- End testimonial -->
 
-    <!-- Client -->
+    <!-- Client
     <div class="vg-page page-client">
         <div class="container">
             <div class="row">
@@ -526,15 +526,15 @@
                 </div>
                 <div class="col-md-6 col-lg-4 col-xl-3 item">
                     <div class="img-place wow fadeInUp">
-                        <img src=".assets/img/logo/company_8.svg" alt="">
+                        <img src="assets/img/logo/company_8.svg" alt="">
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- End client -->
+    <!- End client
 
-    <!-- Blog -->
+    <!- Blog
     <div class="vg-page page-blog" id="blog">
         <div class="container">
             <div class="text-center">
@@ -584,9 +584,9 @@
             </div>
         </div>
     </div>
-    <!-- End blog -->
+    <!- End blog
 
-    <!-- Contact -->
+    <!- Contact
     <div class="vg-page page-contact" id="contact">
         <div class="container-fluid">
             <div class="text-center wow fadeInUp">
@@ -621,11 +621,11 @@
             </div>
         </div>
     </div>
-    <!-- End Contact -->
+    End Contact -->
 
     <!-- Footer -->
     <div class="vg-footer">
-        <h1 class="text-center">Virtual Folio</h1>
+        <h1 class="text-center"></h1>
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 py-3">
@@ -640,10 +640,13 @@
                         <p>Follow me</p>
                         <hr class="divider">
                         <ul class="list-unstyled">
-                            <li><a href="#">Instagram</a></li>
+                            <i class="fa-brands fa-github"></i>
+                            <li>
+                                <a href="#"></a>
+                            </li>
                             <li><a href="#">Facebook</a></li>
-                            <li><a href="#">Twitter</a></li>
-                            <li><a href="#">Youtube</a></li>
+                            <li><a href="#">Github</a></li>
+                            <li><a href="#">Linkedin</a></li>
                         </ul>
                     </div>
                 </div>
@@ -653,14 +656,14 @@
                         <hr class="divider">
                         <ul class="list-unstyled">
                             <li>samad.samowns</li>
-                            <li>Samad Malik</li>
+                            <li>+92-344-4932690</li>
                             <li></li>
                         </ul>
                     </div>
                 </div>
             </div>
             <div class="row justify-content-center mt-3">
-                <div class="col-12 mb-3">
+                <!-- <div class="col-12 mb-3">
                     <h3 class="fw-normal text-center">Subscribe</h3>
                 </div>
                 <div class="col-lg-6">
@@ -670,9 +673,9 @@
                             <input type="submit" class="btn btn-theme no-shadow" value="Subscribe">
                         </div>
                     </form>
-                </div>
+                </div> -->
                 <div class="col-12">
-                    <p class="text-center mb-0 mt-4">Copyright &copy;2020. All right reserved | This template is made with <span class="ti-heart fg-theme-red"></span> by <a href="https://www.macodeid.com/">MACode ID</a></p>
+                    <p class="text-center mb-0 mt-4">Copyright &copy;2022. All right reserved | This template is made with <span class="ti-heart fg-theme-red"></span> by <a href="https://www.samowns.com">SAMOWNS</a></p>
                 </div>
             </div>
         </div>
